--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <!-- Fonts Base -->
 <link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-<link href="https://kominekazuhisa.github.io/webdesign/css2" rel="stylesheet">
+<link href="https://kominekazuhisa.github.io/webdesign1/css2" rel="stylesheet">
 
 <!-- Style Base -->
-<link rel="stylesheet" href="https://kominekazuhisa.github.io/webdesign/yrk4ynm.css">
-<link rel="stylesheet" href="https://kominekazuhisa.github.io/webdesign/style.css">
+<link rel="stylesheet" href="https://kominekazuhisa.github.io/webdesign1/yrk4ynm.css">
+<link rel="stylesheet" href="https://kominekazuhisa.github.io/webdesign1/style.css">
 
 <!-- build:js js/init.min.js -->
 <!-- endbuild -->
@@ -687,7 +687,7 @@
 </footer>
 <!-- //footer --> 
 
-<script src="https://kominekazuhisa.github.io/webdesign/lib.js"></script> 
-<script src="https://kominekazuhisa.github.io/webdesign/main.js"></script>
+<script src="https://kominekazuhisa.github.io/webdesign1/lib.js"></script> 
+<script src="https://kominekazuhisa.github.io/webdesign1/main.js"></script>
 
 </body></html>
