--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <!-- Fonts Base -->
 <link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-<link href="./K.KOMINE - PORTFOLIO_files/css2" rel="stylesheet">
+<link href="https://kominekazuhisa.github.io/webdesign1/css2" rel="stylesheet">
 
 <!-- Style Base -->
-<link rel="stylesheet" href="./K.KOMINE - PORTFOLIO_files/yrk4ynm.css">
-<link rel="stylesheet" href="./K.KOMINE - PORTFOLIO_files/style.css">
+<link rel="stylesheet" href="https://kominekazuhisa.github.io/webdesign1/yrk4ynm.css">
+<link rel="stylesheet" href="https://kominekazuhisa.github.io/webdesign1/style.css">
 
 <!-- build:js js/init.min.js -->
 <!-- endbuild -->
@@ -402,8 +402,8 @@
 </footer>
 <!-- //footer --> 
 
-<script src="./K.KOMINE - PORTFOLIO_files/lib.js.ダウンロード"></script> 
-<script src="./K.KOMINE - PORTFOLIO_files/main.js.ダウンロード"></script>
+<script src="https://kominekazuhisa.github.io/webdesign1/lib.js"></script> 
+<script src="https://kominekazuhisa.github.io/webdesign1/main.js"></script>
 
 
 </body></html>
