--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <header id="l-header" class="l-header"> 
   <!--l-header__body-->
   <div class="l-header__body">
-    <div class="l-header__sitename"> <a href="https://kominekazuhisa.github.io/top/" target="_blank" rel="noopener"> <img data-src="https://likeyou.xxmelonxx.com/image/images/PF/logo_black.png/" class=" lazyloaded" width="100%" height="auto" alt="LITTLE PEAKS" src="./K.KOMINE - PORTFOLIO_files/logo_black.png"> </a> </div>
+    <div class="l-header__sitename"> <a href="https://kominekazuhisa.github.io/top/" target="_blank" rel="noopener"> <img data-src="https://likeyou.xxmelonxx.com/image/images/PF/logo_black.png" class=" lazyloaded" width="100%" height="auto" alt="LITTLE PEAKS" src="https://likeyou.xxmelonxx.com/image/images/PF/logo_black.png"> </a> </div>
   </div>
 </header>
-<!--//header--> 
+<!--//header-->  
 
 <!-- container -->
 <div id="container" class="l-container"> 
@@ -359,7 +359,7 @@
           <!-- cv-wrap -->
           <div class="cv-wrap p-center js-scroll__anime"> 
            <div class="profile-social">
-                      <div class="social-lst"> <a href="https://kominekazuhisa.github.io/contact/" rel="noopener" class="top"> <span><img data-src="https://likeyou.xxmelonxx.com/image/images/PF/top-icon2.png" class=" lazyloaded" width="100%" height="auto" alt="top" src="./K.KOMINE - PORTFOLIO_files/top-icon2.png"></span> </a> </div>
+                      <div class="social-lst"> <a href="https://kominekazuhisa.github.io/webdesign1/" rel="noopener" class="top"> <span><img data-src="https://likeyou.xxmelonxx.com/image/images/PF/top-icon2.png" class=" lazyloaded" width="100%" height="auto" alt="top" src="https://likeyou.xxmelonxx.com/image/images/PF/top-icon2.png"></span> </a> </div>
            </div>
           <!-- //cv-wrap -->
           </div>
@@ -379,7 +379,7 @@
           <picture>
             <source media="(min-width: 569px)" srcset="https://likeyou.xxmelonxx.com/image/images/PF/section-ornmt02_pc.png">
             <source media="(max-width: 568px)" srcset="https://likeyou.xxmelonxx.com/image/images/PF/section-ornmt02_sp.png">
-            <img src="./K.KOMINE - PORTFOLIO_files/section-ornmt02_pc.png" width="100%" height="auto" alt=""> </picture>
+            <img src="https://likeyou.xxmelonxx.com/image/images/PF/section-ornmt02_pc.png" width="100%" height="auto" alt=""> </picture>
         </div>
         <!-- //section-ornmt --> 
         
