--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <header id="l-header" class="l-header"> 
   <!--l-header__body-->
   <div class="l-header__body">
-    <div class="l-header__sitename"> <a href="https://kominekazuhisa.github.io/top/" target="_blank" rel="noopener"> <img data-src="https://likeyou.xxmelonxx.com/image/images/PF/logo_black.png" class=" lazyloaded" width="100%" height="auto" alt="LITTLE PEAKS" src="https://likeyou.xxmelonxx.com/image/images/PF/logo_black.png"> </a> </div>
+    <div class="l-header__sitename"> <a href="https://kominekazuhisa.github.io/top/" rel="noopener"> <img data-src="https://likeyou.xxmelonxx.com/image/images/PF/logo_black.png" class=" lazyloaded" width="100%" height="auto" alt="LITTLE PEAKS" src="https://likeyou.xxmelonxx.com/image/images/PF/logo_black.png"> </a> </div>
   </div>
 </header>
 <!--//header-->  
