--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="l-main__tab-inner bodr-rds"> 
 
           <!-- tab-lst -->
-          <div class="tab-lst page24 page-current"><a href="https://kominekazuhisa.github.io/top/" class="bodr-rds">
+          <div class="tab-lst page23"><a href="https://kominekazuhisa.github.io/about/" class="bodr-rds">
             <p class="f-en c-vrtcl">WORKS</p>
             </a> </div>
           <!-- //tab-lst --> 
