--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <!-- info-text -->
              <div class="info-text js-scroll__anime">
                 <h3 class="f-en msk-set"><span class="msk">制作期間</span></h3>
-                <p class="info-guide js-fade__anime delay-02">2021年6月(約1日間) / ART DIRECTION<br>GAME DESIGN / CHARACTER DESIGN / ETC.<br>
+                <p class="info-guide js-fade__anime delay-02">2021年6月(約1日間)<br>PHOTOSHOP / HTML / CSS / JAVASCRIPT.<br>
                 </p>
              </div>
               <!-- //info-text -->
