--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <!-- info-text -->
             <div class="info-text js-scroll__anime">
                 <h3 class="f-en msk-set"><span class="msk">DETAIL</span></h3>
-                <p class="info-guide js-fade__anime delay-02">ポジション:　1名　 Webデザイン+ディレクションとして参加<br>
+                <p class="info-guide js-fade__anime delay-02">ポジション:1名<br>Webデザイン+ディレクションとして参加<br>
                 </p>
               </div>
               <!-- //info-text -->
